--- a/rsvp/templates/rsvp/detail.html
+++ b/rsvp/templates/rsvp/detail.html
@@ -9,7 +9,7 @@
 <p>{{ event.description }}</p>
 
 <h2>RSVP</h2>
-<form method="POST">
+<form action="{% url 'rsvp:vote' event.id %}" method="POST">
   {% csrf_token %}
   <label for="name">Name:</label>
   <input type="text" id="name" name="name" required>
