Added members app for login system. Added base login html form, and the login page is linked to from the home page.

--- a/rsvp/templates/home.html
+++ b/rsvp/templates/home.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home</title>
 </head>
 <body>
-Welcome to the home page
+<h1>Home</h1>
+<p><a href="/members/login_user/">Login</a></p>
 <p><a href="/rsvp/">View Available Events</a></p>
 </body>
 </html>
