--- a/members/templates/authenticate/login.html
+++ b/members/templates/authenticate/login.html
@@ -10,12 +10,19 @@
 <form method="POST">
   {% csrf_token %}
   <label for="name">Username:</label>
-  <input type="text" id="name" name="name" required>
+  <input type="text" id="name" name="username" required>
 
   <label for="password">Password:</label>
   <input type="password" id="password" name="password" required>
 
   <button type="submit">Submit</button>
 </form>
+{% if messages %}
+    <ul>
+        {% for message in messages %}
+            <li>{{ message }}</li>
+        {% endfor %}
+    </ul>
+{% endif %}
 </body>
 </html>
