--- a/rsvp/templates/home.html
+++ b/rsvp/templates/home.html
@@ -8,5 +8,12 @@
 <h1>Home</h1>
 <p><a href="/members/login_user/">Login</a></p>
 <p><a href="/rsvp/">View Available Events</a></p>
+{% if messages %}
+    <ul>
+        {% for message in messages %}
+            <li>{{ message }}</li>
+        {% endfor %}
+    </ul>
+{% endif %}
 </body>
 </html>
