--- a/rsvp/templates/home.html
+++ b/rsvp/templates/home.html
@@ -6,9 +6,12 @@
 </head>
 <body>
 <h1>Home</h1>
-<p><a href="/members/login_user/">Login</a></p>
+{% if user.is_authenticated %}
+    <p><a href="{% url 'logout' %}">Logout</a></p>
+{% else %}
+    <p><a href="/members/login_user/">Login</a></p>
+{% endif %}
 <p><a href="/rsvp/">View Available Events</a></p>
-<p><a href="{% url 'logout' %}">Logout</a></p>
 {% if messages %}
     <ul>
         {% for message in messages %}
