--- a/rsvp/templates/home.html
+++ b/rsvp/templates/home.html
@@ -10,6 +10,7 @@
     <p><a href="{% url 'logout' %}">Logout</a></p>
 {% else %}
     <p><a href="/members/login_user/">Login</a></p>
+    <p><a href="/members/register_user/">Register</a></p>
 {% endif %}
 <p><a href="/rsvp/">View Available Events</a></p>
 {% if messages %}
