--- a/guestbook/templates/guestbook/index.html
+++ b/guestbook/templates/guestbook/index.html
@@ -12,10 +12,11 @@ Mini Project 4
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Messages</title>
+    <title>Guestbook</title>
 </head>
 <body>
-<h1>Messages</h1>
+<h1>Guestbook</h1>
+<p><a href="/guestbook/compose/">Compose a message</a></p>
 {% if latest_memo_list %}
    <ul>
 {% for memo in latest_memo_list %}
