Items added manually from admin appear on the registry page.

--- a/rsvp/templates/home.html
+++ b/rsvp/templates/home.html
@@ -30,12 +30,13 @@
             </div>
 
             <div id="logobox">
-                <img src="{% static 'rsvp/images/logo.png' %}" alt="Logo" class="banner_pic">
+                <img src="{% static 'rsvp/images/flowers.jpg' %}" alt="Logo" class="banner_pic">
             </div>
 
             <div id="navigation">
                 <ul>
                     <li><a href="/guestbook">Guestbook</a></li><br>
+                    <li><a href="/wishlist/">Registry</a></li><br>
                     <li><a href="/rsvp">RSVP</a></li><br>
                 </ul>
             </div>
