--- a/rsvp/templates/rsvp/detail.html
+++ b/rsvp/templates/rsvp/detail.html
@@ -12,23 +12,33 @@ Mini Project 4
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{ event.title }}</title>
+    <title>RSVP – {{ event.text }}</title>
     <!-- Add Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .fillout {
+	    display: flex;
+	    justify-content: center;
+}
+        form {
+	    text-align: center;
+}
+        h1 {
+        text-align: center;
+        }
+    </style>
 
 </head>
 <body>
-<h1>{{ event.title }}</h1>
-<p>{{ event.description }}</p>
-
-<h2>RSVP</h2>
+<h1>RSVP to {{ event.event_text }}</h1>
+<div class="fillout">
 <form action="{% url 'rsvp:respond' event.id %}" method="POST">
   {% csrf_token %}
-  <label for="name">Name:</label>
-  <input type="text" id="name" name="name" required>
+  <label for="name">Name:</label><br>
+  <input type="text" id="name" name="name" required><br><br>
 
-  <label for="email">Email:</label>
-  <input type="email" id="email" name="email" required>
+  <label for="email">Email:</label><br>
+  <input type="email" id="email" name="email" required><br><br>
 
 <!-- Button to trigger modal -->
   <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#rsvpModal">
@@ -55,6 +65,7 @@ Mini Project 4
     </div>
   </div>
 </form>
+</div>
 
 
 
