Minor naming fixes.

--- a/wishlist/templates/wishlist/index.html
+++ b/wishlist/templates/wishlist/index.html
@@ -12,7 +12,7 @@ Mini Project 4
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Events</title>
+    <title>Registry</title>
 </head>
 <body>
 <h1>Registry</h1>
