--- a/rsvp/templates/home.html
+++ b/rsvp/templates/home.html
@@ -2,7 +2,7 @@
 <html lang= "en">
 
 <head>
-	<title>Levi Eck – Home</title>
+	<title>Wedding – Home</title>
 	<meta charset="utf8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -11,8 +11,8 @@
 
 	<style>
         main {
-            height: 100vh; /* Sets the height to 100% of the viewport height */
-            width: 100%; /* Ensures it spans the full width */
+            height: 100vh;
+            width: 100%;
         }
     </style>
 </head>
