Styling for login and register pages.

--- a/members/templates/authenticate/register_user.html
+++ b/members/templates/authenticate/register_user.html
@@ -12,6 +12,8 @@ Mini Project 4
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'members/css/members_style.css' %}">
     <title>Register</title>
 </head>
 <body>
@@ -24,7 +26,7 @@ Mini Project 4
 <form action="{% url 'register_user' %}" method="POST">
   {% csrf_token %}
   {{ form }}
-  <button type="submit">Submit</button>
+  <br><input type="submit">
 </form>
 
 
