--- a/members/templates/authenticate/login.html
+++ b/members/templates/authenticate/login.html
@@ -12,6 +12,8 @@ Mini Project 4
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'members/css/members_style.css' %}">
     <title>Login</title>
 </head>
 <body>
@@ -20,12 +22,12 @@ Mini Project 4
 <form method="POST">
   {% csrf_token %}
   <label for="name">Username:</label>
-  <input type="text" id="name" name="username" required>
+  <input type="text" id="name" name="username" required><br>
 
   <label for="password">Password:</label>
-  <input type="password" id="password" name="password" required>
+  <input type="password" id="password" name="password" required><br><br>
 
-  <button type="submit">Submit</button>
+  <input type="submit">
 </form>
 {% if messages %}
     <ul>
