--- a/rsvp/templates/home.html
+++ b/rsvp/templates/home.html
@@ -14,6 +14,11 @@
             height: 100vh;
             width: 100%;
         }
+
+        #login ul {
+	    list-style-type: none;
+        text-decoration: none;
+        }
     </style>
 </head>
 
@@ -21,12 +26,14 @@
     <div id="wrapper">
         <header>
             <div id="login">
-                {% if user.is_authenticated %}
-                    <li><a href="{% url 'logout' %}">Logout</a></li>
-                {% else %}
-                    <li><a href="/members/login_user/">Login</a></li>
-                    <li><a href="/members/register_user/">Register</a></li>
-                {% endif %}
+                <ul>
+                    {% if user.is_authenticated %}
+                        <li><a href="{% url 'logout' %}">Logout</a></li>
+                    {% else %}
+                        <li><a href="/members/login_user/">Login</a></li>
+                        <li><a href="/members/register_user/">Register</a></li>
+                    {% endif %}
+                </ul>
             </div>
 
             <div id="logobox">
