--- a/guestbook/templates/guestbook/index.html
+++ b/guestbook/templates/guestbook/index.html
@@ -11,23 +11,55 @@ Mini Project 4
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8">{% load static %}
+    <link rel="stylesheet" href="{% static '/guestbook/css/guestbook_style.css' %}">
     <title>Guestbook</title>
+    <style>
+        .compose-button button {
+            width: 100px;
+	        height: 37px;
+	        background-color: #21409A;
+	        color: #FFFFFF;
+	        border: none;
+            cursor: pointer;
+        }
+        .compose-button button:hover {
+            transform: scale(1.1);
+	        transition: transform .25s ease;
+        }
+
+        body {
+            font-family: Arial;
+            text-align: center;
+        }
+        body ul {
+            list-style-type: none;
+        }
+
+    </style>
 </head>
 <body>
 <h1>Guestbook</h1>
-<p><a href="/guestbook/compose/">Compose a message</a></p>
-{% if latest_memo_list %}
-   <ul>
-{% for memo in latest_memo_list %}
-    <li><strong>{{ memo.name }}</strong> said: "{{ memo.content }}" on {{ memo.pub_date|date:"M d, Y H:i" }}</li>
-{% empty %}
-    <li>No messages yet.</li>
-{% endfor %}
+
+<div class="compose-button">
+    <a href="/guestbook/compose/">
+        <button>Compose a message</button>
+    </a>
+</div>
+
+<div id="feed">
+    {% if latest_memo_list %}
+        <ul>
+    {% for memo in latest_memo_list %}
+        <li><strong>{{ memo.name }}</strong> said: "{{ memo.content }}" on {{ memo.pub_date|date:"M d, Y H:i" }}</li><br>
+    {% empty %}
+        <li>No messages yet.</li>
+    {% endfor %}
 </ul>
 
 {% else %}
     <p>No messages are available.</p>
 {% endif %}
+</div>
 </body>
 </html>
