Minor Comment edits.

--- a/rsvp/templates/rsvp/index.html
+++ b/rsvp/templates/rsvp/index.html
@@ -1,11 +1,11 @@
 <!--
 INF601 - Advanced Programming in Python
-Assignment: Mini Project 4
+Assignment: Final Project
 I,     Levi Eck    , affirm that the work submitted for this assignment is entirely my own. I have not engaged in any form of academic dishonesty, including but not limited to cheating, plagiarism, or the use of unauthorized materials. I have neither provided nor received unauthorized assistance and have accurately cited all sources in adherence to academic standards. I understand that failing to comply with this integrity statement may result in consequences, including disciplinary actions as determined by my course instructor and outlined in institutional policies. By signing this statement, I acknowledge my commitment to upholding the principles of academic integrity.
 
 INF601 - Advanced Programming in Python
 Levi Eck
-Mini Project 4
+Final Project
 -->
 
 <!DOCTYPE html>
@@ -13,6 +13,12 @@ Mini Project 4
 <head>
     <meta charset="UTF-8">
     <title>Events</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap');
+        h1 {
+	    font-family: "Libre Baskerville", serif;
+        }
+    </style>
 </head>
 <body>
 <h1>Events</h1>
