--- a/rsvp/templates/home.html
+++ b/rsvp/templates/home.html
@@ -24,6 +24,9 @@
 	    text-align: center;
 	    font-family: "Libre Baskerville", serif;
         }
+        h3 {
+            text-align: center;
+        }
     </style>
 </head>
 
@@ -42,6 +45,7 @@
                 </ul>
             </div>
             <h1>Our Wedding Day</h1>
+            <h3>Today's Temperature: {{ temperature }}°F</h3>
 
 
             <div id="logobox">
