--- a/wishlist/templates/wishlist/detail.html
+++ b/wishlist/templates/wishlist/detail.html
@@ -13,23 +13,62 @@ Final Project
 <head>
     <meta charset="UTF-8">
     <title>Registry – {{ gift.gift_item }}</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap');
+
+        body {
+	        text-align: center;
+        }
+
+        h1, h2 {
+            font-family: "Libre Baskerville", serif;
+        }
+
+        .compose-button button {
+            width: 100px;
+	        height: 37px;
+	        background-color: #21409A;
+	        color: #FFFFFF;
+	        border: none;
+            cursor: pointer;
+        }
+        .compose-button button:hover {
+            transform: scale(1.1);
+	        transition: transform .25s ease;
+        }
+        input[type="submit"]{
+            width: 100px;
+	        height: 37px;
+	        background-color: #21409A;
+	        color: #FFFFFF;
+	        border: none;
+            cursor: pointer;
+        }
+
+        input[type="submit"]:hover{
+            transform: scale(1.1);
+	        transition: transform .25s ease;
+        }
+    </style>
 
 </head>
 <body>
 <h1>{{ gift.gift_item }}</h1>
-<a href="https://www.amazon.com/Silverware-Organizer-Stainless-Rust-proof-Dishwasher/dp/B0C557C1KJ?crid=32PRGGITO6WPQ&dib=eyJ2IjoiMSJ9.jaUHzFhDLi38EN0M3CLUZCJCoSC5_H-bu05Vkam-diXqvfEN1Lc3j2-d3MHbtMkVS7hohrLz1JvahRnhnV6HgKda97MIyaVk29ILSkh3lUea20iznGqjZho8dZnTxlrvoB1MpVG_RXq-Zbh9pZ25n4OemXLmLPGRnjJPGeRnQixajt4l2CQjgmgHiM-NF_ZiV3xb1tqR5_hBJlwNGr4lXho3sl3BanDzUjpIealnlM3UnxPXywkRikc989wjPF0zMtaio5IOz4pNuIrzLNWu3PizpNHUSXus9OaaCaPDezg.303gi8QKwd3Uz9BYK6t1MSxlKAi-jX-s3tl_LVO8IKM&dib_tag=se&keywords=silverware%2Bset&qid=1746162250&sprefix=silverware%2Bset%2Caps%2C132&sr=8-5&th=1" target=_blank>
-    <button>View Item</button>
-</a>
+<div class="compose-button">
+    <a href=https://www.amazon.com/Silverware-Organizer-Stainless-Rust-proof-Dishwasher/dp/B0C557C1KJ?crid=32PRGGITO6WPQ&dib=eyJ2IjoiMSJ9.jaUHzFhDLi38EN0M3CLUZCJCoSC5_H-bu05Vkam-diXqvfEN1Lc3j2-d3MHbtMkVS7hohrLz1JvahRnhnV6HgKda97MIyaVk29ILSkh3lUea20iznGqjZho8dZnTxlrvoB1MpVG_RXq-Zbh9pZ25n4OemXLmLPGRnjJPGeRnQixajt4l2CQjgmgHiM-NF_ZiV3xb1tqR5_hBJlwNGr4lXho3sl3BanDzUjpIealnlM3UnxPXywkRikc989wjPF0zMtaio5IOz4pNuIrzLNWu3PizpNHUSXus9OaaCaPDezg.303gi8QKwd3Uz9BYK6t1MSxlKAi-jX-s3tl_LVO8IKM&dib_tag=se&keywords=silverware%2Bset&qid=1746162250&sprefix=silverware%2Bset%2Caps%2C132&sr=8-5&th=1" target=_blank>
+        <button>View Item</button>
+    </a>
+</div>
 
 <h2>Item Status</h2>
 <form action="{% url 'wishlist:respond' gift.id %}" method="POST">
     {% csrf_token %}
     {% if not gift.has_been_claimed %}
-        <label for="claim">Check box to claim gift:</label>
+        <label for="claim">Check box to claim gift:</label><br>
         <input type="checkbox" id="claim" name="claim" required><br>
         <input type="submit" value="Update Status">
     {% else %}
-        <label for="claim">Gift has been claimed. Uncheck box if that is not true:</label>
+        <label for="claim">Gift has been claimed. Uncheck box if that is not true:</label><br>
         <input type="checkbox" id="claim" name="claim" checked><br>
         <input type="submit" value="Update Status">
     {% endif %}
