--- a/guestbook/templates/guestbook/index.html
+++ b/guestbook/templates/guestbook/index.html
@@ -51,7 +51,7 @@ Final Project
     {% if latest_memo_list %}
         <ul>
     {% for memo in latest_memo_list %}
-        <li><strong>{{ memo.name }}</strong> said: "{{ memo.content }}" on {{ memo.pub_date|date:"M d, Y H:i" }}</li><br>
+        <li><strong>{{ memo.name }}</strong> said: "{{ memo.content }}" on {{ memo.pub_date|date:"M d, Y" }}</li><br>
     {% empty %}
         <li>No messages yet.</li>
     {% endfor %}
