--- a/rsvp/templates/rsvp/index.html
+++ b/rsvp/templates/rsvp/index.html
@@ -29,7 +29,7 @@ Final Project
     {% endfor %}
     </ul>
 {% else %}
-    <p>No events are available.</p>
+    <p>No events are available. Add events through the admin page.</p>
 {% endif %}
 </body>
 </html>
