--- a/guestbook/templates/guestbook/index.html
+++ b/guestbook/templates/guestbook/index.html
@@ -58,7 +58,7 @@ Final Project
 </ul>
 
 {% else %}
-    <p>No messages are available.</p>
+    <p>No messages yet.</p>
 {% endif %}
 </div>
 </body>
