--- a/wishlist/templates/wishlist/index.html
+++ b/wishlist/templates/wishlist/index.html
@@ -29,7 +29,7 @@ Final Project
     {% endfor %}
     </ul>
 {% else %}
-    <p>No registry items are available.</p>
+    <p>No registry items yet. Add items through the admin page.</p>
 {% endif %}
 </body>
 </html>
